--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "alpinejs": "^3.13.3",
+        "bootstrap-icons": "^1.11.1",
         "sweetalert2": "^11.9.0",
         "toastr": "^2.1.4"
     }
