--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
         "flowbite": "^1.8.1",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.3.3",
+        "tailwindcss": "^3.3.5",
         "vite": "^4.0.0"
     },
     "dependencies": {
         "alpinejs": "^3.13.3",
         "bootstrap-icons": "^1.11.2",
+        "datatables.net-dt": "^1.13.8",
         "jquery": "^3.7.1",
+        "postcss-cli": "^10.1.0",
         "sweetalert2": "^11.9.0",
         "toastr": "^2.1.4"
     }
