--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
         "barryvdh/laravel-debugbar": "^3.13",
         "barryvdh/laravel-dompdf": "*",
         "cviebrock/eloquent-sluggable": "10.0",
+        "egulias/email-validator": "^4.0",
         "fakerphp/faker": "^1.23",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "maatwebsite/excel": "3.*"
+        "maatwebsite/excel": "3.*",
+        "swiftmailer/swiftmailer": "^5.4"
     },
     "require-dev": {
         "andyabih/laravel-to-uml": "^1.0",
